tests/ui/runtime-frame-label-new-private.rs
use hibana::runtime::transport::FrameLabel;

fn main() {
    let _ = FrameLabel::new(0);
}
